# Eikonal-Cesaroni-Tonarelli-Trabacchin

./: CMakeLists.txt  NOTES.md  README.md  main.cpp
localProblem/: LineSearchSolver.cpp  solveEikonalLocalProblem.cpp
localProblem_alt2/: LineSearchSolver.cpp
localProblem_alt2/include/: Eikonal_traits.hpp  LineSearchSolver.hpp  Phi.hpp  SimplexData.hpp
src/: CircularList.h  DoubleCircularList.h  EikonalSolver.h  Lattice2DMesh.h  Lattice2DSolver.h  LatticeMesh.h  Mesh.h  ParallelEikonalSolver.h  SerialEikonalSolver.h  TestParallelEikonalSolver.h  TetrahedricalEikonalsolver.h  TetrahedricalMesh.h  TriangleEikonalSolver.h  TriangleMesh.h  TriangularEikonalSolver.h  TriangularMesh.h  main.cpp  point.h  shape.h  vertex.h
src/utils/: CreatingLooper.h  FillingLooper.h
test/: algebraicLocalSolver.cpp  output-mesh-cube-5.vtk  test_circularList.cpp  test_circularList_alt.cpp  test_local_solver.cpp  test_mesh.vtk  test_tetrahedricalMesh.cpp  test_triangularMesh.cpp  test_triangulatedMesh.cpp  triangular_mesh_test.vtk  triangular_mesh_test.vtx
test/input_meshes/triangular/: big-square.vtk  square.vtk
test/input_meshes/triangulated/: bunny.vtk  moai.vtk
test/meshes/: output-mesh-cube-10.vtk  triangulated_mesh_test.vtk
test/output_meshes/: ouput-bunny.vtk  ouput-square.vtk  output-bunny.vtk  output-moai.vtk  output-multi.vtk  output-triangular.vtk  output.vtk  output2.vtk
